tests/invalid/return_without_value_set_expected/main.py
def bad() -> set[int]:
    return


def run_case() -> None:
    bad()


if __name__ == "__main__":
    run_case()
